[gd_scene load_steps=8 format=3 uid="uid://8ms1sdb4ojv8"]

[ext_resource type="Script" path="res://splash/splash.gd" id="1_7kd17"]
[ext_resource type="Texture2D" uid="uid://cttnii4ae5pnk" path="res://textures/black.png" id="2_6wxpb"]
[ext_resource type="Texture2D" uid="uid://cirbeb5i3uuvd" path="res://splash/res/team-seven.png" id="3_x0wyr"]
[ext_resource type="Texture2D" uid="uid://b13fmu4llwaxs" path="res://splash/res/godot-logo.png" id="4_cotty"]

[sub_resource type="Animation" id="Animation_hgwuh"]
length = 10.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonSkip/TeamSeven:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_68enu"]
resource_name = "SplashAnimation"
length = 10.01
step = 0.25
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonSkip/TeamSeven:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 1, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 1, 0.25, 0),
"times": PackedFloat32Array(0, 1, 4, 5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonSkip/Godot:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 1, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 1, 0.25, 0),
"times": PackedFloat32Array(5, 6, 9, 10)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_62dcp"]
_data = {
"RESET": SubResource("Animation_hgwuh"),
"SplashAnimation": SubResource("Animation_68enu")
}

[node name="Splash" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7kd17")

[node name="SplashAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_62dcp")
}
autoplay = "SplashAnimation"

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6wxpb")
expand_mode = 1

[node name="ButtonSkip" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1150.0
offset_bottom = 650.0
icon_alignment = 1

[node name="TeamSeven" type="TextureRect" parent="ButtonSkip"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -25.0
offset_right = 150.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_x0wyr")

[node name="Godot" type="TextureRect" parent="ButtonSkip"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1266.5
offset_top = -512.0
offset_right = 1266.5
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.15, 0.15)
pivot_offset = Vector2(1262.5, 512)
texture = ExtResource("4_cotty")

[connection signal="animation_finished" from="SplashAnimation" to="." method="_on_splash_animation_finished"]
[connection signal="button_up" from="ButtonSkip" to="." method="_on_button_skip_button_up"]
